# ArcPoint

./: .gitignore  Makefile  README.md  pyproject.toml
arcpoint/: __init__.py
arcpoint/agents/: agent.py  context_api.py
arcpoint/context/: api.py  schemas.py
arcpoint/diagnostics/: anomaly.py  chaos.py
arcpoint/feedback/: loop.py
arcpoint/observability/: dashboard.py
arcpoint/routing/: engine.py  model.py
docs/: arcpoint-system-architecture.drawio
tests/: __init__.py  test_agents.py  test_chaos.py  test_context_api.py  test_diagnostics.py  test_feedback.py  test_integration.py  test_routing.py
